// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When adding a new crossing as admin@community.floods  the new crossing should show up in the DB 1`] = `
Object {
  "crossingById": Object {
    "communityCrossingsByCrossingId": Object {
      "nodes": Array [
        Object {
          "communityId": 1,
        },
      ],
    },
    "description": "TEST LAND IS MAGIC!",
    "humanAddress": "In test land",
    "name": "New Crossing",
  },
}
`;

exports[`When adding a new crossing as admin@community.floods to a different community should fail to add the crossing 1`] = `[Error: GraphQL Error: Users can only add crossings to their communities]`;

exports[`When adding a new crossing as editor@community.floods  the new crossing should show up in the DB 1`] = `
Object {
  "crossingById": Object {
    "communityCrossingsByCrossingId": Object {
      "nodes": Array [
        Object {
          "communityId": 1,
        },
      ],
    },
    "description": "TEST LAND IS MAGIC!",
    "humanAddress": "In test land",
    "name": "New Crossing",
  },
}
`;

exports[`When adding a new crossing as editor@community.floods to a different community should fail to add the crossing 1`] = `[Error: GraphQL Error: Users can only add crossings to their communities]`;

exports[`When adding a new crossing as superadmin@flo.ods  the new crossing should show up in the DB 1`] = `
Object {
  "crossingById": Object {
    "communityCrossingsByCrossingId": Object {
      "nodes": Array [
        Object {
          "communityId": 1,
        },
      ],
    },
    "description": "TEST LAND IS MAGIC!",
    "humanAddress": "In test land",
    "name": "New Crossing",
  },
}
`;

exports[`When adding a new crossing as superadmin@flo.ods  the new crossing should show up in the DB 2`] = `
Object {
  "crossingById": Object {
    "communityCrossingsByCrossingId": Object {
      "nodes": Array [
        Object {
          "communityId": 2,
        },
      ],
    },
    "description": "TEST LAND IS MAGIC!",
    "humanAddress": "In test land",
    "name": "New Crossing",
  },
}
`;
